@@ -164,10 +164,13 @@ class MergeBuilder(object):
             new_inventory[file_id] = path
         return new_inventory
 
-    def cleanup(self):
+    def unlock(self):
         self.base.unlock()
         self.this.unlock()
         self.other.unlock()
+
+    def cleanup(self):
+        self.unlock()
         rmtree(self.dir)
 
 
@@ -283,14 +286,19 @@ y
         builder.add_file("5", "TREE_ROOT", "name7", "a\nb\nc\nd\ne\nf\n", True)
         builder.change_contents("5", other="a\nz\nc\nd\ne\nf\n", 
                                      this="a\nb\nc\nd\ne\nz\n")
-        builder.merge(merge_factory)
-        self.assertEqual(builder.this.get_file("1").read(), "text4" )
-        self.assertEqual(builder.this.get_file("2").read(), "text2" )
-        self.assertEqual(builder.this.get_file("5").read(), 
-                         "a\nz\nc\nd\ne\nz\n")
-        self.assertIs(builder.this.is_executable("1"), True)
-        self.assertIs(builder.this.is_executable("2"), False)
-        self.assertIs(builder.this.is_executable("3"), True)
+        conflicts = builder.merge(merge_factory)
+        try:
+            self.assertEqual([], conflicts)
+            self.assertEqual(builder.this.get_file("1").read(), "text4" )
+            self.assertEqual(builder.this.get_file("2").read(), "text2" )
+            self.assertEqual(builder.this.get_file("5").read(), 
+                             "a\nz\nc\nd\ne\nz\n")
+            self.assertIs(builder.this.is_executable("1"), True)
+            self.assertIs(builder.this.is_executable("2"), False)
+            self.assertIs(builder.this.is_executable("3"), True)
+        except:
+            builder.unlock()
+            raise
         return builder
 
     def contents_test_conflicts(self, merge_factory):
