@@ -29,6 +29,8 @@ IN DEVELOPMENT
     * Leave HttpTransportBase daughter classes decides how they
       implement cloning. (Vincent Ladeuil, #61606)
 
+   * diff3 does not indicate conflicts on clean merge. (Aaron Bentley)
+
   TESTING:
 
     * New test base class TestCaseWithMemoryTransport offers memory-only
